--- a/app/views/controller.html
+++ b/app/views/controller.html
@@ -5,7 +5,7 @@
 				<span>Aprenda como utilizar o Kep Framework</span>
 			</div>
 			<div class="right">
-				<a href="#" class="btn btn-download"><span>BETA</span>DOWNLOAD V0.1</a>
+				<a href="https://github.com/KepPHP/Kep/archive/master.zip" class="btn btn-download"><span>BETA</span>DOWNLOAD V0.1</a>
 			</div>
 		</div>
 	</div>
