Adicionando imagem de doação e ajustando o site para vários dispositivos

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -288,4 +288,16 @@
 				</div>
 			</div>
 		</div>
+		<div class="grid grid-12 gray border">
+			<div class="jumbotron donation">
+				<div class="image-donation"></div>
+				<div class="text donation">
+					<h3>Doe um café para a nossa equipe!</h3>
+					<span>Ajude a mantermos o nosso projeto, fazendo uma <br>
+					doção de qualquer valor.</span>
+					<br /><br />
+					<a href="#" class="btn btn-docs">DOAR (PAYPAL)</a>
+				</div>
+			</div>
+		</div>
 	</div>
