--- a/app/views/model.html
+++ b/app/views/model.html
@@ -42,7 +42,7 @@
 		<div class="grid grid-8">
 			<div class="docs-content">
 				<h1>Model</h1>
-				<p>Criação de models</p>
+				<p>Para a criação de Models é preciso seguir algumas regras de nossa Framework, leia mais em <a href="#/docs">Getting started</a></p>
 			</div>
 		</div>
 	</div>
