Correção de Português

--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -168,7 +168,7 @@
 				<h1>Model</h1>
 				<p>Para a criar o model e interagir com o controller, leia mais sobre <a href="#/docs/model">Model</a>.</p>
 				<h1>Views</h1>
-				<p>Utilizar o AngularJS como view para consumir a nossa API, veja alguns detalhes em <a href="#/docs/angularjs">View AangularJS</a></p>
+				<p>Utilizar o AngularJS como view para consumir a nossa API, veja alguns detalhes em <a href="#/docs/angularjs">View AngularJS</a></p>
 				<h1>Seeds</h1>
 				<p>Para criar as suas proprias classes e reutilizar de forma eficiente nos controllers, leia mais
 				sobre <a href="#/docs/seeds">Seeds</a>.</p>
