Criando página Sobre e correção de erros

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -293,8 +293,8 @@
 				<div class="image-donation"></div>
 				<div class="text donation">
 					<h3>Doe um café para a nossa equipe!</h3>
-					<span>Ajude a mantermos o nosso projeto, fazendo uma <br>
-					doção de qualquer valor.</span>
+					<span>Ajude a mantermos o projeto, fazendo uma <br>
+					doação de qualquer valor.</span>
 					<br /><br />
 					<a href="#" class="btn btn-docs">DOAR (PAYPAL)</a>
 				</div>
