--- a/app/views/home.html
+++ b/app/views/home.html
@@ -115,7 +115,7 @@
 					familiarizar com uma framework antes ir para algo mais <br>
 					profissional, como o <b>Laravel</b></span>
 					<br /><br />
-					<a href="https://github.com/KepPHP/Kep/archive/master.zip" class="btn btn-download"><span>BETA</span>DOWNLOAD V0.1</a>
+					<a href="https://github.com/KepPHP/Kep/archive/master.zip" class="btn btn-download"><span>ALPHA</span>DOWNLOAD V0.1</a>
 				</div>
 			</div>
 		</div>
