Adicionando o twitter para acompanhar as atualizações

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -13,7 +13,7 @@
 				<p>Pretendemos levar o Kep Framework para todos e mostrar de forma clara para iniciantes, como é o desenvolvimento de uma framework e como podem aumentar a produtividade com Kep.</p>
 				<h1>Equipe</h1>
 				<p>Kep Framework foi iniciado por um desenvolvedor, com a mesma curiosidade de aprender como é um funcionamento de uma framework, utilizando como view o AngularJS.</p>
-				<p>Matuzalém S. Teles - <a href="https://github.com/matuzalemsteles">GitHub</a> | <a href="fb.com/matuzalem.teles">Facebook</a></p>
+				<p>Matuzalém S. Teles - <a href="https://github.com/matuzalemsteles">GitHub</a> | <a href="https://twitter.com/MatuzalemTeles">Twitter</a></p>
 				<h1>Ínicio</h1>
 				<p>Matuzalém S. Teles: O Kep Framework, começou quando estava em um desenvolvimento de um projeto próprio, onde estava trabalhando em uma grande atualização.</p>
 				<p>Precisava de uma framework para agilizar no desenvolvimento da aplicação. E como eu tinha duvidas sobre o funcionamento de uma Framework e como se trabalhar com a mesma, fiz um desafio a mim próprio, criar uma pequena framework que serviria para a criação de API, para ser consumida pelo AngularJS.</p>
