Adicionando mais elementos

--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -53,7 +53,7 @@
 				<p>Para criação basica de uma simples API com Kep Framework é preciso adicionar os arquivos 
 				da framework em uma pasta com qualquer nome, como exemplo "api", assim fica a nossa
 				aplicação.</p>
-				<div class="code">
+				<div class="code docs">
 					<span class="php-line">
 						<span>api/</span>
 					</span>
@@ -94,12 +94,12 @@
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
   						<span>│</span>
 						<span>&nbsp;&nbsp;</span>
-						<span>├─ kep.php</span>
+						<span>└── kep.php</span>
 					</span>
 				</div>
 				<p>Acesse a pasta do kep e config, abra o arquivo database.php para configuração de acesso ao
 				banco de dados.</p>
-				<div class="code">
+				<div class="code docs">
 					<span class="php-line">
 						<span class="php-keyword">return</span>
 						<span>[</span>
@@ -167,7 +167,7 @@
 				<p>Para o funcionamento correto da aplicação é preciso criar uma pasta chamada de “v1”  e criar
 				as pasta subsequentes para o uso do controller e model., nossa estrutura de nossa aplicação
 				fica assim.</p>
-				<div class="code">
+				<div class="code docs">
 					<span class="php-line">
 						<span>api/</span>
 					</span>
@@ -208,31 +208,27 @@
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
   						<span>│</span>
 						<span>&nbsp;&nbsp;</span>
-						<span>├─ kep.php</span>
+						<span>└── kep.php</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-						<span>├─ v1/</span>
+						<span>└─ v1/</span>
 					</span>
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ controllers/</span>
 					</span>
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ models/</span>
 					</span>
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ .htaccess</span>
 					</span>
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
-						<span>├─ index.php</span>
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+						<span>└─ index.php</span>
 					</span>
 				</div>
 				<h1>Routes</h1>
