--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -94,7 +94,7 @@
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
   						<span>│</span>
 						<span>&nbsp;&nbsp;</span>
-						<span>└── kep.php</span>
+						<span>└─ kep.php</span>
 					</span>
 				</div>
 				<p>Acesse a pasta do kep e config, abra o arquivo database.php para configuração de acesso ao
@@ -208,7 +208,7 @@
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
   						<span>│</span>
 						<span>&nbsp;&nbsp;</span>
-						<span>└── kep.php</span>
+						<span>└─ kep.php</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
