--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -59,41 +59,34 @@
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-						<span>├─ kep/</span>
+						<span>└─ kep/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ config/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ controller/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ database/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ model/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ route/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ autoload.php</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  						<span>│</span>
-						<span>&nbsp;&nbsp;</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>└─ kep.php</span>
 					</span>
 				</div>
@@ -214,19 +207,23 @@
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>└─ v1/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ controllers/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ models/</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+						<span>├─ seeds/</span>
+					</span>
+					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ .htaccess</span>
 					</span>
-					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>└─ index.php</span>
 					</span>
