--- a/app/views/home.html
+++ b/app/views/home.html
@@ -173,7 +173,7 @@
 		<div class="grid grid-12">
 			<div class="grid grid-6" align="center">
 				<div class="img-logo">
-					Controlloer
+					Controller
 				</div>
 				<a href="#/docs/controller" class="btn btn-docs">DOCUMENTAÇÃO CONTROLLER</a>
 			</div>
