--- a/app/views/authentication.html
+++ b/app/views/authentication.html
@@ -23,13 +23,13 @@
 					</li>
 					<li>Database
 						<ul>
-							<li class="active"><a href="#/docs/query-builder">Query Builder</a></li>
+							<li><a href="#/docs/query-builder">Query Builder</a></li>
 						</ul>
 					</li>
 					<li>Serviços
 						<ul>
 							<li><a href="#/docs/seeds">Seeds</a></li>
-							<li><a href="#/docs/authentication">Authentication</a></li>
+							<li class="active"><a href="#/docs/authentication">Authentication</a></li>
 						</ul>
 					</li>
 					<li>Views
@@ -42,8 +42,8 @@
 		</div>
 		<div class="grid grid-8">
 			<div class="docs-content">
-				<h1>Query Builder</h1>
-				<p>Conexão com banco de dados no model</p>
+				<h1>Authentication</h1>
+				<p>Autenticação da conta do usuário.</p>
 			</div>
 		</div>
 	</div>
