--- a/app/views/model.html
+++ b/app/views/model.html
@@ -29,6 +29,7 @@
 					<li>Serviços
 						<ul>
 							<li><a href="#/docs/seeds">Seeds</a></li>
+							<li><a href="#/docs/authentication">Authentication</a></li>
 						</ul>
 					</li>
 					<li>Views
