Layout da Store

--- a/app/views/store.html
+++ b/app/views/store.html
@@ -4,12 +4,56 @@
 				<h1>Store</h1>
 				<span>Compre lembranças do Kep Framework</span>
 			</div>
+			<div class="right">
+				<a href="#" class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> R$ 0,00</a>
+				<a href="#" class="btn btn-store buy">Comprar</a>
+			</div>
 		</div>
 	</div>
 	<div class="container container-body">
 		<div class="grid grid-12">
 			<div class="docs-content ">
-				<h1>Em construção...</h1>
+				<h1>Stickers</h1>
+				
+				<div class="store-block">
+					<div class="store-block-inline">
+						<div class="store-img"><img src="imagens/sticker-logo.png" alt="Sticker logo"></div>
+						<div class="store-data">
+							Kep (Logo) Sticker
+							<span>R$5,99</span>
+						</div>
+					</div>
+					<div class="store-btn">
+						<a href="#" class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
+					</div>
+				</div>
+				
+				<div class="store-block">
+					<div class="store-block-inline">
+						<div class="store-img"><img src="imagens/sticker-horizontal-2.png" alt="Sticker logo"></div>
+						<div class="store-data">
+							Kep (horizontal) Sticker
+							<span>R$5,99</span>
+						</div>
+					</div>
+					<div class="store-btn">
+						<a href="#" class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
+					</div>
+				</div>
+				
+				<div class="store-block">
+					<div class="store-block-inline">
+						<div class="store-img"><img src="imagens/sticker-horizontal.png" alt="Sticker logo"></div>
+						<div class="store-data">
+							Kep (horizontal) Sticker
+							<span>R$5,99</span>
+						</div>
+					</div>
+					<div class="store-btn">
+						<a href="#" class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
+					</div>
+				</div>
+				
 			</div>
 		</div>
 	</div>
