--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,29 @@ header .right a:hover{
 	background-color: #5b4184;
 }
 
+.btn.btn-store{
+	padding: 15px 15px 15px 15px;
+    color: #fff;
+}
+
+.btn.btn-store.car{
+	background-color: #563d7c;
+}
+
+.btn.btn-store.buy{
+	padding: 20px 15px 15px 15px;
+	background-color: #333;
+}
+
+.btn.btn-store.car:hover{
+	background-color: #5b4184;
+	color: #fff;
+}
+
+.btn.btn-store.buy:hover{
+	background-color: #3a3a3a;
+}
+
 .img-logo{
 	position: relative;
 	width: 169px;
@@ -538,7 +561,39 @@ footer .right a:hover{
 	color: #5b4184;
 }
 
+.store-block{
+	float: left;
+	width: 268px;
+	margin: 10px;
+}
 
+.store-block-inline{
+	float: left;
+	border-radius: 5px;
+	margin-bottom: 15px;
+	width: 268px;
+	height: 336px;
+	background-color: #e1e1e1;
+}
+
+.store-btn {
+    text-align: center;
+}
+
+.store-img {
+    text-align: center;
+}
+
+.store-data {
+    text-align: center;
+    font-size: 24px;
+    color: #646464;
+}
+
+.store-data span{
+	display: block;
+	color: #727272;
+}
 
 @media (max-width: 1024px){
 	.container{
