--- a/app/views/store.html
+++ b/app/views/store.html
@@ -5,14 +5,17 @@
 				<span>Compre lembranças do Kep Framework</span>
 			</div>
 			<div class="right">
-				<a href="#" class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> R$ 0,00</a>
-				<a href="#" class="btn btn-store buy">Comprar</a>
+				<a class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> R$ {{value}}</a>
+				<a ng-click="checkout()" class="btn btn-store buy">Comprar</a>
 			</div>
 		</div>
 	</div>
 	<div class="container container-body">
 		<div class="grid grid-12">
 			<div class="docs-content ">
+				
+				<div ng-if="isMsg == true" class="box-message">{{Msg}}</div>
+				
 				<h1>Stickers</h1>
 				
 				<div class="store-block">
@@ -24,7 +27,7 @@
 						</div>
 					</div>
 					<div class="store-btn">
-						<a href="#" class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
+						<a ng-click='buy("stk001")' class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
 					</div>
 				</div>
 				
@@ -37,7 +40,7 @@
 						</div>
 					</div>
 					<div class="store-btn">
-						<a href="#" class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
+						<a ng-click='buy("stk002")' class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
 					</div>
 				</div>
 				
@@ -50,7 +53,7 @@
 						</div>
 					</div>
 					<div class="store-btn">
-						<a href="#" class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
+						<a ng-click='buy("stk003")' class="btn btn-store car"><img src="imagens/buy.png" alt="Carrinho"> Comprar</a>
 					</div>
 				</div>
 				
