--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,7 @@ header .right a:hover{
 }
 
 .btn.btn-store{
+	cursor: pointer;
 	padding: 15px 15px 15px 15px;
     color: #fff;
 }
@@ -593,6 +594,14 @@ footer .right a:hover{
 .store-data span{
 	display: block;
 	color: #727272;
+}
+
+.box-message {
+    color: #646464;
+    width: 88%;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #e1e1e1;
 }
 
 @media (max-width: 1024px){
