--- a/css/style.css
+++ b/css/style.css
@@ -599,9 +599,111 @@ footer .right a:hover{
 .box-message {
     color: #646464;
     width: 88%;
-    border-radius: 5px;
-    padding: 10px;
+    padding: 20px 12px 17px 12px;
     background-color: #e1e1e1;
+}
+
+.box-message.alert{
+	border-left: 4px solid #563d7c;
+}
+
+.box-message .right{
+	float: right;
+	
+}
+
+/* Nav */
+.primary_nav_wrap{
+	float: left;
+	margin-right: 10px;
+}
+
+.primary_nav_wrap ul{
+	list-style:none;
+	position:relative;
+	float:left;
+	margin:0;
+	padding:0;
+	z-index: 2;
+}
+
+.primary_nav_wrap ul label{
+	display:block;
+	color: #fff;
+	text-decoration:none;
+	font-size: 14px;
+}
+
+.primary_nav_wrap ul li:hover > a.btn.btn-store.car{
+	background-color: #5b4184;
+}
+
+.primary_nav_wrap ul ul{
+	display:none;
+	position:absolute;
+	top:100%;
+	left:0;
+	background:#5b4184;
+	padding: 0px;
+  
+    -webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	
+	/*-webkit-box-shadow: 0 1px 6px rgba(0,0,0,.15);
+	-moz-box-shadow: 0 1px 6px rgba(0,0,0,.15);
+	box-shadow: 0 1px 6px rgba(0,0,0,.15); */
+	-webkit-transition: all .1s ease-out;
+	-moz-transition: all .1s ease-out;
+	-ms-transition: all .1s ease-out;
+	-o-transition: all .1s ease-out;
+	transition: all .1s ease-out;  
+}
+
+.primary_nav_wrap ul ul li{
+	float:none;
+	width: 193px;
+	margin-top: 23px;
+}
+
+.primary_nav_wrap ul ul label{
+	float: left;
+  	cursor: pointer;
+	padding: 3px 10px;
+}
+
+.primary_nav_wrap ul ul span.delete{
+	width: 6px;
+    background-color: #b12e2e;
+    border-radius: 50%;
+    float: left;
+    cursor: pointer;
+    padding: 0px 6px 0px 5px;
+    margin: 0;
+    margin-left: 9px;
+    font-size: 13px;
+    color: #fff;
+}
+.primary_nav_wrap ul ul span{
+	float: left;
+	width: 109px;
+    margin-bottom: 10px;
+    margin-top: -6px;
+    padding: 0px 35px;
+    color: #e7e7e7;
+}
+
+.primary_nav_wrap ul ul li label:hover{
+	color: #f0f0f0;
+}
+
+.primary_nav_wrap ul ul ul{
+	top:0;
+	left:100%
+}
+
+.primary_nav_wrap ul li:hover > ul{
+	display:block
 }
 
 @media (max-width: 1024px){
