--- a/app/views/home.html
+++ b/app/views/home.html
@@ -27,7 +27,7 @@
 				</div>
 				<div class="content-php">
 					<span class="php-line">
-						<span class="php-metatag">&lt;php</span>
+						<span class="php-metatag">&lt;?php</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
